# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter-check.yml
brain_games/: engine.py  game_frame.py
brain_games/games/: .brain_even_.py.swp  calc.py  even.py  game_frame.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc_.py  brain_even.py  brain_even_.py  brain_games_.py  brain_gcd.py  brain_gcd_.py  brain_prime_.py  brain_progression.py  brain_progression_.py
