[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sofia Pavlova <sofikopavlova@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games_:main"
brain-even = "brain_games.scripts.brain_even_:main"
brain-calc = "brain_games.scripts.brain_calc_:main"
brain-gcd = "brain_games.scripts.brain_gcd_:main"
brain-progression = "brain_games.scripts.brain_progression_:main"
brain-prime = "brain_games.scripts.brain_prime_:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
